--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -3,13 +3,13 @@ Oracle11g的实验题，为数据库添加一个多路复用的控制文件contr
 ![tupian](http://otcegvh8q.bkt.clouddn.com/201710301207.png)
 
 # 解决办法
-* SQL PLUS 中用sys管理员登录
-'
+* **SQL PLUS 中用sys管理员登录**     
+***
+'sakdkj'
 {
 SQL>shutdown immediate; 关闭数据库连接
 SQL>startup nomount
 SQL> alter system set control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;
 shutdown immediate;
 startup
-}
-'
+}''
