--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -13,3 +13,7 @@ SQL> alter system set     control_files='E:\Oracle\oradata\orcl\control01.ctl','
 shutdown immediate;     
 startup     
 }''
+
+* **参考博客**   
+***
+[参考博客](https://blog.csdn.net/qq_34400232/article/details/78391925)
