--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -1,18 +1,18 @@
 # ORACLE实验错误
-Oracle11g的实验题，为数据库添加一个多路复用的控制文件control03.ctl。照着书上的步骤 关闭数据库 –> 复制一个控制文件到新位置并重命名 –> 编辑初始化参数文件中的CONTROL_FILES参数，将新添加的控制文件名称添加到控制文件列表中.
+Oracle11g的实验题，为数据库添加一个多路复用的控制文件control03.ctl。照着书上的步骤 关闭数据库 –> 复制一个控制文件到新位置并重命名 –> 编辑初始化参数文件中的CONTROL_FILES参数，将新添加的控制文件名称添加到控制文件列表中.   
 ![tupian](http://otcegvh8q.bkt.clouddn.com/201710301207.png)
 
 # 解决办法
 * **SQL PLUS 中用sys管理员登录**     
 ***
-'sakdkj'
+`kfjkll`
 {
 SQL>shutdown immediate; 关闭数据库连接   
 SQL>startup nomount    
 SQL> alter system set     control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;   
 shutdown immediate;     
 startup     
-}''
+
 
 * **参考博客**   
 ***
