--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -5,24 +5,12 @@ Oracle11g的实验题，为数据库添加一个多路复用的控制文件contr
 # 解决办法
 * **SQL PLUS 中用sys管理员登录**     
 ***
-<<<<<<< HEAD
-
-`
-=======
-`kfjkll`
-{
->>>>>>> 2dcab47b8500917af6ac333ab966b78e82743988
-SQL>shutdown immediate; 关闭数据库连接   
-SQL>startup nomount    
-SQL> alter system set     control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;   
+shutdown immediate; 关闭数据库连接   
+startup nomount    
+alter system set     control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;   
 shutdown immediate;     
 startup     
-<<<<<<< HEAD
 `
-=======
-
-
->>>>>>> 2dcab47b8500917af6ac333ab966b78e82743988
 * **参考博客**   
 ***
 [参考博客](https://blog.csdn.net/qq_34400232/article/details/78391925)
