--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -6,11 +6,11 @@ Oracle11g的实验题，为数据库添加一个多路复用的控制文件contr
 * **SQL PLUS 中用sys管理员登录**     
 ***
 
-  `shutdown immediate; 关闭数据库连接`
-  `startup nomount`     
-  `alter system set`        `control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;`
-  `shutdown immediate;`   
-  `startup`     
+  `shutdown immediate; 关闭数据库连接`  
+  `startup nomount`       
+  `alter system set      control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;`  
+  `shutdown immediate;`     
+  `startup`       
 
 * **参考博客**   
 ***
