--- a/oracle学习日记/5.19.md
+++ b/oracle学习日记/5.19.md
@@ -10,7 +10,11 @@ Oracle11g的实验题，为数据库添加一个多路复用的控制文件contr
   `startup nomount`       
   `alter system set control_files='E:\Oracle\oradata\orcl\control01.ctl','E:\Oracle\oradata\orcl\control02.ctl'scope=spfile;`  
   `shutdown immediate;`     
-  `startup`       
+  `startup`  
+
+      public void main(String [] args){
+        public static void main()
+      }
 
 * **参考博客**   
 ***
